# chief-of-staff-communication-agent

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  RUNNING.md  SETUP.md  SOLUTION.md  SPAWN.md  cdk.json  cloudwatch-metrics.json  docker-compose.prod.yml  docker-compose.rag.yml  docker-compose.yml  eslint.config.mjs  justfile  mcp.json  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  tsconfig.json  turbo.json  vitest.config.ts
.assessment/changes/: COS-006.json  COS-007.json  COS-008.json
.cursor-plugin/: plugin.json
.github/workflows/: ci-cd-dev.yml  ci-cd-prod.yml  ci.yml
agents/: gardevoir.md
apps/agent-handler/: package.json
apps/api/: package.json  tsconfig.json
apps/e2e/: auth-fixture.ts  package.json  (+6 more)
commands/: approve.md  context.md  draft.md  triage.md
containers/: toolchain.Dockerfile
cos/: __init__.py  asana_client.py  config.py  models.py
docs/: DEMO.md  DEMO_SCRIPT.md  EVAL.md  FOLLOWUPS.md  ONTOLOGY.md  PRD.md  azure-setup.md  cursor-mcp.md  cursor-setup.md  demo_flow.html  demo_slides.html  design.md  evaluator-quickstart.md  plan.md  provider-setup.md
infra/: main.bicep
kit/: PATCH.md
mcp/: http.ts  package.json  server.ts  tools.ts  tsconfig.json
migrations/: 001_init.sql  002_provider_correlation.sql  003_connector_tokens.sql  005_open_channels.sql  007_multitenant.sql  008_owner_not_null.sql  009_mcp_tokens.sql  010_connector_tokens_owner_unique.sql
prisma/: schema.prisma
scripts/: build-style-profile.ts  create_demo_user.py  deploy-web.ts  expand_fixtures.py  gmail-auth.ts  provision_user.py  rag-replay.ts  reclassify-nodraft.ts  reconcile_asana.py  seed-demo.ts  seed-needs-context.ts  seed-org-knowledge.ts  seed_demo_inbox.py  seed_knowledge.py  seed_realism.py  smoke.ts  sync-asana.ts  telegram_login.py  verify-ingest.ts  whatsapp-connect.ts  write-web-env.ts
src/: auth.ts
tests/: conftest.py  crypto.test.ts  skills.test.ts  strip-quoted.test.ts  test_a2a.py  test_agents.py  test_api.py  test_api_contract.py  test_approval_gate.py  test_config_modes.py  test_connectors.py  test_corpus_invariants.py  test_edge_cases.py  test_eval.py  test_fixture_integrity.py  test_judge.py  test_kb.py  test_mocks.py  test_pipeline_e2e.py  test_properties.py  test_real_mode.py  test_retrieval_quality.py  test_robustness.py  test_serialization.py  test_tricky_messages.py
web/: .env.example  .gitignore  Dockerfile  index.html  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+524 files in other folders)
