[project]
name = "chief-of-staff-communication-agent"
version = "0.1.0"
description = "Chief of Staff Communication Agent — multi-channel ingestion, RAG, style-matched drafts, Asana linking."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "faker>=30.0",
    "httpx>=0.27",
    "tweepy>=4.14",
    "asana>=5.0",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "numpy>=1.26",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "requests-mock>=1.12",
    "hypothesis>=6.100",
]
ui = [
    "gradio>=4.44",
    "networkx>=3.3",
    "matplotlib>=3.9",
]
agents = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "a2a-sdk>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cos"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
